# lua---parallel

./: CMakeLists.txt  FindZMQ.cmake  README.md  cloud.lua  init.lua  parallel-1.0-0.rockspec  parallel-1.0-1.rockspec  parallel-1.1-0.rockspec  parallel-scm-1.rockspec  parallel.c  sysctl.conf  test.lua  zmq.c  zmq.lua
examples/: clientStorage.lua  cloudPBS.lua  parallelBigTransfer.lua  parallelCalibrate.lua  parallelForkAndSync.lua  parallelLocal.lua  parallelProcessQueue.lua  parallelRemote.lua  parallelTest.lua  serverStorage.lua
generic/: parallel.c  zmq.c
